// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-popover Should render with element 1`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 2`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 3`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" data-show id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="true" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 4`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <mg-button aria-label="Close" is-icon="" role="button" tabindex="0">
        <mock:shadow-root>
          <div class="mg-button mg-button--flat mg-button--icon">
            <div class="mg-button__content">
              <slot></slot>
            </div>
          </div>
        </mock:shadow-root>
        <mg-icon icon="cross"></mg-icon>
      </mg-button>
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 5`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" data-show id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="true" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 6`] = `
<mg-popover lang="fr">
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <mg-button aria-label="Fermer" is-icon="" role="button" tabindex="0">
        <mock:shadow-root>
          <div class="mg-button mg-button--flat mg-button--icon">
            <div class="mg-button__content">
              <slot></slot>
            </div>
          </div>
        </mock:shadow-root>
        <mg-icon icon="cross"></mg-icon>
      </mg-button>
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 7`] = `
<mg-popover lang="xx">
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <mg-button aria-label="Close" is-icon="" role="button" tabindex="0">
        <mock:shadow-root>
          <div class="mg-button mg-button--flat mg-button--icon">
            <div class="mg-button__content">
              <slot></slot>
            </div>
          </div>
        </mock:shadow-root>
        <mg-icon icon="cross"></mg-icon>
      </mg-button>
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div class="mg-popover__arrow" data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;

exports[`mg-popover Should render with element 8`] = `
<mg-popover>
  <mock:shadow-root>
    <slot></slot>
    <div class="mg-popover" id="identifier" style="position: fixed; left: 0; top: 0; margin: 0;">
      <div class="mg-popover__title">
        <slot name="title"></slot>
      </div>
      <slot name="content"></slot>
      <div data-popper-arrow style="position: absolute;"></div>
    </div>
  </mock:shadow-root>
  <h2 slot="title">
    Blu bli blo bla
  </h2>
  <p slot="content">
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
  </p>
  <mg-button aria-controls="identifier" aria-expanded="false" role="button" tabindex="0">
    <mock:shadow-root>
      <div class="mg-button mg-button--primary" id="identifier-btn">
        <div class="mg-button__content">
          <slot></slot>
        </div>
      </div>
    </mock:shadow-root>
    mg-button
  </mg-button>
</mg-popover>
`;
